--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -37,36 +37,36 @@ Insert module-specific examination instructions here
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \question[optional space for title]
-The first question.\marks{12}
+The first question.\mk{12}
 
 \begin{solution}
-Solutions can be placed in-line, to generate solution files from the same source.\marks{3}
+Solutions can be placed in-line, to generate solution files from the same source.\mk{3}
 
-Inside solutions, notes can be added to the marks.\solnmarksplus{4}{Like this}
+Inside solutions, notes can be added to the marks.\mk[Like this]{4}
 \end{solution}
 
 \question
 The second question.\marks{3}
 
 \begin{solution}
-Solutions can be placed in-line, to generate solution files from the same source.\marks{3}
+Solutions can be placed in-line, to generate solution files from the same source.\mk[Be generous!]{3}
 \end{solution}
 
 \question[(example of creating subquestions)]
 
 \begin{enumerate}
-\item Use the standard enumerate environment.\marks{3}
+\item Use the standard enumerate environment.\mk{3}
 \item \begin{enumerate}
-\item Sub-sub part.\marks{2}
-\item Sub-sub part.\marks{2}
+\item Sub-sub part.\mk{2}
+\item Sub-sub part.\mk{2}
 \begin{solution}
-Solutions can be created per sub-question, or per sub-sub-question, or after the entire question.\marks{2}
+Solutions can be created per sub-question, or per sub-sub-question, or after the entire question.\mk{2}
 \end{solution}
 \end{enumerate}
 \end{enumerate}
 The enumitem package allows numbering to be resumed later, to replace the OUTeX `intertext' command.
 \begin{enumerate}[resume]
-\item Numbering continues from before.\marks{4}
+\item Numbering continues from before.\mk{4}
 \end{enumerate}
 
 
@@ -74,12 +74,12 @@ The enumitem package allows numbering to be resumed later, to replace the OUTeX 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -132,12 +132,12 @@ The class file is based on the standard article class file, so commands such as 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -146,12 +146,12 @@ The class file is based on the standard article class file, so commands such as 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -160,12 +160,12 @@ The class file is based on the standard article class file, so commands such as 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -174,24 +174,24 @@ The class file is based on the standard article class file, so commands such as 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
 \question
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item one\marks 4
-\item two, with a sufficiently long question that it runs over more than one line.\marks{4}
+\item one\mk 4
+\item two, with a sufficiently long question that it runs over more than one line.\mk{4}
 \item 
 \begin{enumerate}
-\item Sub-sub\marks 2
-\item Sub-sub that is sufficiently long that it runs over more than one line.\marks 2
+\item Sub-sub\mk 2
+\item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -207,10 +207,10 @@ The class file is based on the standard article class file, so commands such as 
 Another way to generate solutions is to use the solutions switch at the end of the file. These will appear irrespective of the showsolutions option.
 
 \question[optional space for title]
-The solution to the first question.\marks{12}
+The solution to the first question.\mk{12}
 
 \question
-The solution to the second question.\marks{3}
+The solution to the second question.\mk{3}
 
 
 \end{document}
